# shopping-agent-research

./: .env.examples  .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  app.py  firecrawl_agent.py  prompt_editor.py  prompt_manager_ui.py  pyproject.toml  railway.toml  requirements.txt  seed_prompt.py  test_prompt_customization.py
data/: prompts.json  prompts_separated.json
src/agent/: enhanced_shopping_agent.py  shopping_react_agent.py
src/config/: agent_config.py  prompt_config.py
src/config/prompts/: default.json  기본_설정_analysis_수정본11_20250703_005132.json  기본_설정_analysis_수정본_20250703_005057.json
src/tools/: datetime.py  firecrawl.py  retriever.py  tavily.py
src/utils/: __init__.py  local_prompt_manager.py  local_prompt_manager_backup.py  local_prompt_manager_separated.py  retry_helper.py  text_processing.py
tests/: __init__.py  test_config_comparison.py  test_enhanced_agent.py
